Update javafx-maven-plugin section of pom: - add module name in <mainClass> - bump version to 0.0.5 - remove unneeded options